--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 <body>
 
   <header>
-    <div class="container">
-      <img src="img/Logo.png" alt="logo Boolean">
-      <h1>Toboolist</h1>
+    <div class="header">
+      <img class="logo" src="img/Logo.png" alt="logo Boolean">
+      <h1 class="logo-title">Toboolist</h1>
     </div>
   </header>
 
-  <main>m</main>
+  <main>
+
+  </main>
 
   <footer>f</footer>
 
