--- a/index.html
+++ b/index.html
@@ -20,9 +20,36 @@
 
   <main>
 
+    <section class="main">
+      <button class="button1">Add task</button>
+      <button class="button2">Add section</button>
+    </section>
+
+    <!-- Start Main -->
+
+    <section class="main section ">
+
+      <!-- New Task -->
+
+      <div>
+        <h3>New Task</h3>
+
+        <p class="thingstodo">Quartertly Newsletter <span class="colored">editorial</span></p>
+      </div>
+
+      <!-- Today -->
+
+      <div>
+        <h3>Today</h3>
+
+        <p class="thingstodo">Quartertly Newsletter <span class="colored">editorial</span></p>
+      </div>
+
+    </section>
+
+
   </main>
 
-  <footer>f</footer>
 
 </body>
 
