--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div>
         <h3>New Task</h3>
 
-        <p class="thingstodo">Quartertly Newsletter <span class="colored">editorial</span></p>
+        <p class="thingstodo">Quartertly Newsletter <span class="colored blue">Editorial</span></p>
       </div>
 
       <!-- Today -->
@@ -42,7 +42,27 @@
       <div>
         <h3>Today</h3>
 
-        <p class="thingstodo">Quartertly Newsletter <span class="colored">editorial</span></p>
+        <p class="thingstodo">Recruiting blog post <span class="colored blue">Editorial</span></p>
+
+        <p class="thingstodo">Mobile app launch <span class="colored purple">Q1 Goals</span></p>
+
+        <p class="thingstodo">Interview John H. <span class="colored green">Recruiting</span></p>
+
+        <p class="thingstodo">Summit update to mobile storefronts <span class="colored orange">Mobile</span></p>
+      </div>
+
+      <!-- Start Upcoming -->
+
+      <div>
+        <h3>Today</h3>
+
+        <p class="thingstodo">Recruiting blog post <span class="colored blue">Editorial</span></p>
+
+        <p class="thingstodo">Mobile app launch <span class="colored purple">Q1 Goals</span></p>
+
+        <p class="thingstodo">Interview John H. <span class="colored green">Recruiting</span></p>
+
+        <p class="thingstodo">Summit update to mobile storefronts <span class="colored orange">Mobile</span></p>
       </div>
 
     </section>
