--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
       <!-- Start Upcoming -->
 
       <div>
-        <h3>Today</h3>
+        <h3>Upcoming</h3>
 
-        <p class="thingstodo">Recruiting blog post <span class="colored blue">Editorial</span></p>
+        <p class="thingstodo">Schedule meeting with Alex</p>
 
-        <p class="thingstodo">Mobile app launch <span class="colored purple">Q1 Goals</span></p>
+        <p class="thingstodo">Homepage refresh <span class="colored pink">Website</span></p>
 
-        <p class="thingstodo">Interview John H. <span class="colored green">Recruiting</span></p>
+        <p class="thingstodo">Homeboard new Sales team members <span class="colored ocra">Sales</span></p>
 
-        <p class="thingstodo">Summit update to mobile storefronts <span class="colored orange">Mobile</span></p>
+        <p class="thingstodo">Review editorial calendar <span class="colored blue">Editorial</span></p>
       </div>
 
     </section>
