--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="header">
       <img class="logo" src="img/Logo.png" alt="logo Boolean">
-      <h1 class="logo-title">Toboolist</h1>
+      <h1 class="logo-title"><strong>Toboolist</strong></h1>
     </div>
   </header>
 
