--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div>
         <h3>New Task</h3>
 
-        <p class="thingstodo">Quartertly Newsletter <span class="colored blue">Editorial</span></p>
+        <p class="thingstodo yes">Quartertly Newsletter <span class="colored blue">Editorial</span></p>
       </div>
 
       <!-- Today -->
@@ -42,13 +42,13 @@
       <div>
         <h3>Today</h3>
 
-        <p class="thingstodo">Recruiting blog post <span class="colored blue">Editorial</span></p>
+        <p class="thingstodo yes">Recruiting blog post <span class="colored blue">Editorial</span></p>
 
-        <p class="thingstodo">Mobile app launch <span class="colored purple">Q1 Goals</span></p>
+        <p class="thingstodo yes">Mobile app launch <span class="colored purple">Q1 Goals</span></p>
 
-        <p class="thingstodo">Interview John H. <span class="colored green">Recruiting</span></p>
+        <p class="thingstodo nope">Interview John H. <span class="colored green">Recruiting</span></p>
 
-        <p class="thingstodo">Summit update to mobile storefronts <span class="colored orange">Mobile</span></p>
+        <p class="thingstodo yes">Summit update to mobile storefronts <span class="colored orange">Mobile</span></p>
       </div>
 
       <!-- Start Upcoming -->
@@ -56,18 +56,17 @@
       <div>
         <h3>Upcoming</h3>
 
-        <p class="thingstodo">Schedule meeting with Alex</p>
+        <p class="thingstodo nope">Schedule meeting with Alex</p>
 
-        <p class="thingstodo">Homepage refresh <span class="colored pink">Website</span></p>
+        <p class="thingstodo yes">Homepage refresh <span class="colored pink">Website</span></p>
 
-        <p class="thingstodo">Homeboard new Sales team members <span class="colored ocra">Sales</span></p>
+        <p class="thingstodo yes">Homeboard new Sales team members <span class="colored ocra">Sales</span></p>
 
-        <p class="thingstodo">Review editorial calendar <span class="colored blue">Editorial</span></p>
+        <p class="thingstodo yes">Review editorial calendar <span class="colored blue">Editorial</span></p>
       </div>
+      <!-- Main end -->
 
     </section>
-
-
   </main>
 
 
