--- a/index.html
+++ b/index.html
@@ -11,64 +11,47 @@
 
 <body>
 
+  <!-- Start header -->
   <header>
-    <div class="header">
-      <img class="logo" src="img/Logo.png" alt="logo Boolean">
-      <h1 class="logo-title"><strong>Toboolist</strong></h1>
-    </div>
+    <img id="logo" src="img/Logo.png" alt="Logo Boolean">
+    <span id="title">Toboolist</span>
   </header>
 
+  <!-- Start button -->
   <main>
+    <div class="container">
+      <button class="btn task">Add Task</button>
+      <button class="btn section">Add Section</button>
+    </div>
 
-    <section class="main">
-      <button class="button1">Add task</button>
-      <button class="button2">Add section</button>
-    </section>
+    <!-- Start list -->
 
-    <!-- Start Main -->
+    <div class="todo">
 
-    <section class="main section ">
+      <ul>
+        <h4>New Task</h4>
 
-      <!-- New Task -->
+        <li class="list yes">Quarterly Newsletter <span class="highlight editorial">Editorial</span> </li>
 
-      <div>
-        <h3>New Task</h3>
+        <h4>Today</h4>
 
-        <p class="thingstodo yes">Quartertly Newsletter <span class="colored blue">Editorial</span></p>
-      </div>
+        <li class="list yes">Recruiting blog post <span class="highlight editorial">Editorial</span> </li>
+        <li class="list yes">Mobile app launch <span class="highlight q1">Q1 Goals</span> </li>
+        <li class="list no">Interview John H. <span class="highlight recruiting">Recruiting</span> </li>
+        <li class="list yes">Summit update to mobile storefonts <span class="highlight mobile">Mobile</span></li>
 
-      <!-- Today -->
+        <h4>Upcoming</h4>
 
-      <div>
-        <h3>Today</h3>
+        <li class="list no">Schedule meeting with Alex</li>
+        <li class="list yes">Mobile app launch <span class="highlight website">Website</span> </li>
+        <li class="list yes">Interview John H. <span class="highlight sales">Sales</span> </li>
+        <li class="list yes">Summit update to mobile storefonts <span class="highlight editorial">Editorial</span></li>
+      </ul>
 
-        <p class="thingstodo yes">Recruiting blog post <span class="colored blue">Editorial</span></p>
+    </div>
+    <!-- List end -->
 
-        <p class="thingstodo yes">Mobile app launch <span class="colored purple">Q1 Goals</span></p>
-
-        <p class="thingstodo nope">Interview John H. <span class="colored green">Recruiting</span></p>
-
-        <p class="thingstodo yes">Summit update to mobile storefronts <span class="colored orange">Mobile</span></p>
-      </div>
-
-      <!-- Start Upcoming -->
-
-      <div>
-        <h3>Upcoming</h3>
-
-        <p class="thingstodo nope">Schedule meeting with Alex</p>
-
-        <p class="thingstodo yes">Homepage refresh <span class="colored pink">Website</span></p>
-
-        <p class="thingstodo yes">Homeboard new Sales team members <span class="colored ocra">Sales</span></p>
-
-        <p class="thingstodo yes">Review editorial calendar <span class="colored blue">Editorial</span></p>
-      </div>
-      <!-- Main end -->
-
-    </section>
   </main>
-
 
 </body>
 
